# rust-graphql-study

./: .env  Cargo.toml  README.md
migrations/2021-04-18-022554_categories/: up.sql
migrations/2021-04-18-022755_questions/: down.sql  up.sql
migrations/2021-04-23-113458_add_category_id_to_questions/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs  utils.rs
src/models/: categories.rs
